--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>htmlunit</artifactId>
             <version>2.11</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
 
 
